added loss header to existing articles

--- a/content/attacks/posts/2012-07-16-BTC-e.md
+++ b/content/attacks/posts/2012-07-16-BTC-e.md
@@ -6,6 +6,7 @@ entity-types:
   - Exchange
 attack-types: Infrastructure Attack
 title: BTC-e hacked, losing around 4,500 BTC
+loss: 55020
 ---
 
 ## Summary
