--- a/content/attacks/posts/2012-09-19-Silk-Road.md
+++ b/content/attacks/posts/2012-09-19-Silk-Road.md
@@ -8,6 +8,7 @@ attack-types:
   - Infrastructure Attack
   - Race Condition Exploit
 title: "50,000 Bitcoin Wire Fraud: Record Cryptocurrency Seizure in U.S. History"
+loss: 3360000000
 ---
 
 ## Summary
