--- a/content/attacks/posts/2014-02-28-MtGox.md
+++ b/content/attacks/posts/2014-02-28-MtGox.md
@@ -6,6 +6,7 @@ entity-types:
   - Exchange
 attack-types: Infrastructure Attack
 title: Mt. Gox hacked, losing over $450 million worth of Bitcoin
+loss: 450000000
 ---
 
 ## Summary
