--- a/content/attacks/posts/2015-01-04-Bitstamp.md
+++ b/content/attacks/posts/2015-01-04-Bitstamp.md
@@ -8,6 +8,7 @@ attack-types:
   - Phishing
   - Wallet Hack
 title: Bitstamp hot wallet hacked for 18,866 BTC due to human error
+loss: 5289837
 ---
 
 ## Summary
