--- a/content/attacks/posts/2016-08-02-Bitfinex.md
+++ b/content/attacks/posts/2016-08-02-Bitfinex.md
@@ -8,6 +8,7 @@ entity-types:
 attack-types:
   - Infrastructure Attack
 title: "Bitfinex Hack Led To 119,756 Bitcoin Stolen"
+loss: 72000000
 ---
 
 ## Summary
