--- a/content/attacks/posts/2016-08-23-Krypton.md
+++ b/content/attacks/posts/2016-08-23-Krypton.md
@@ -4,6 +4,7 @@ target-entities: Krypton
 entity-types: Blockchain
 attack-types: 51%
 title: "Krypton (KR) suffers a 51% attack in August 2016"
+loss: 3000
 ---
 
 ## Summary
