--- a/content/attacks/posts/2016-08-27-Shift.md
+++ b/content/attacks/posts/2016-08-27-Shift.md
@@ -4,6 +4,7 @@ target-entities: Shift
 entity-types: Blockchain
 attack-types: 51%
 title: "Shift (SHIFT) experiences a 51% attack in August 2016"
+loss: unknown
 ---
 
 ## Summary
