--- a/content/attacks/posts/2017-07-18-Parity.md
+++ b/content/attacks/posts/2017-07-18-Parity.md
@@ -6,6 +6,7 @@ entity-types:
   - Wallet
 attack-types: Smart Contract Exploit
 title: "Parity Multisig Wallet Hack Resulting in a $34 Million Loss"
+loss: 34000000
 ---
 
 ## Summary
