--- a/content/attacks/posts/2017-11-06-Parity.md
+++ b/content/attacks/posts/2017-11-06-Parity.md
@@ -6,6 +6,7 @@ entity-types:
   - Wallet
 attack-types: Smart Contract Exploit
 title: "Parity Multisig Wallet Bug Locks 513k ETH"
+loss: 154000000
 ---
 
 ## Summary
