--- a/content/attacks/posts/2017-11-19-Tether.md
+++ b/content/attacks/posts/2017-11-19-Tether.md
@@ -6,6 +6,7 @@ entity-types:
   - Stablecoin
 attack-types: Wallet Hack
 title: "Tether Faces $31 Million Security Breach"
+loss: 30950010
 ---
 
 ## Summary
