--- a/content/attacks/posts/2018-04-04-Verge.md
+++ b/content/attacks/posts/2018-04-04-Verge.md
@@ -4,6 +4,7 @@ target-entities: Verge
 entity-types: Blockchain
 attack-types: 51%
 title: Verge suffers a 51% attack in April 2018
+loss: 1750000
 ---
 
 ## Summary
