--- a/content/attacks/posts/2018-06-10-Coinrail.md
+++ b/content/attacks/posts/2018-06-10-Coinrail.md
@@ -6,6 +6,7 @@ entity-types:
   - Exchange
 attack-types: Wallet Hack
 title: "Coinrail lost $40 million in a cyberattack"
+loss: 40000000
 ---
 
 ## Summary
