--- a/content/attacks/posts/2018-09-14-Zaif.md
+++ b/content/attacks/posts/2018-09-14-Zaif.md
@@ -6,6 +6,7 @@ entity-types:
   - Exchange
 attack-types: Wallet Hack
 title: "Zaif loses $60 Million in Cyberattack"
+loss: 60000000
 ---
 
 ## Summary
