--- a/content/attacks/posts/2018-10-24-Vertcoin.md
+++ b/content/attacks/posts/2018-10-24-Vertcoin.md
@@ -4,6 +4,7 @@ target-entities: Vertcoin
 entity-types: Blockchain
 attack-types: 51%
 title: Vertcoin suffers a 51% attack
+loss: 100000
 ---
 
 ## Summary
