--- a/content/attacks/posts/2019-02-20-Coinbin.md
+++ b/content/attacks/posts/2019-02-20-Coinbin.md
@@ -11,6 +11,7 @@ attack-types:
   - Insider Attack
   - Private Key Leak
 title: "Embezzlement Leads to $26 Million Loss and Bankruptcy of Coinbin Exchange"
+loss: 26000000
 ---
 
 ## Summary
