--- a/content/attacks/posts/2019-03-25-CoinBene.md
+++ b/content/attacks/posts/2019-03-25-CoinBene.md
@@ -6,6 +6,7 @@ entity-types:
   - Exchange
 attack-types: Wallet Hack
 title: "CoinBene Exchange Allegedly Loses Over $100 Million in Suspected Hack"
+loss: 105150329
 ---
 
 ## Summary
