--- a/content/attacks/posts/2019-11-27-Upbit.md
+++ b/content/attacks/posts/2019-11-27-Upbit.md
@@ -6,6 +6,7 @@ entity-types:
   - Exchange
 attack-types: Wallet Hack
 title: "Upbit Loses $49 Million in Cyberattack"
+loss: 49000000
 ---
 
 ## Summary
