--- a/content/attacks/posts/2020-09-07-Eterbase.md
+++ b/content/attacks/posts/2020-09-07-Eterbase.md
@@ -8,6 +8,7 @@ attack-types:
   - Wallet Hack
   - Web Infrastructure Attack
 title: "Eterbase Exchange Security Breach with a Loss of $5,400,000"
+loss: 5400000
 ---
 
 ## Summary
