--- a/content/attacks/posts/2020-12-21-Exmo.md
+++ b/content/attacks/posts/2020-12-21-Exmo.md
@@ -6,6 +6,7 @@ entity-types:
   - Custodian
 attack-types: Wallet Hack
 title: "EXMO Exchange Hot Wallets Compromised: Approximately $10.5 Million Stolen"
+loss: 10500000
 ---
 
 ## Summary
