--- a/content/attacks/posts/2021-08-18-Liquid.md
+++ b/content/attacks/posts/2021-08-18-Liquid.md
@@ -6,6 +6,7 @@ entity-types:
   - Exchange
 attack-types: Wallet Hack
 title: "Liquid Exchange Hacked for $97 Million"
+loss: 97000000
 ---
 
 ## Summary
