--- a/content/attacks/posts/2021-08-28-Bilaxy.md
+++ b/content/attacks/posts/2021-08-28-Bilaxy.md
@@ -6,6 +6,7 @@ entity-types:
   - Custodian
 attack-types: Wallet Hack
 title: "Bilaxy Exchange Suffers Security Breach with a Loss of $21 Million"
+loss: 21000000
 ---
 
 ## Summary
