--- a/content/attacks/posts/2021-12-05-Polygon.md
+++ b/content/attacks/posts/2021-12-05-Polygon.md
@@ -10,6 +10,7 @@ attack-types:
   - Smart Contract Exploit
   - Signature Verification Issue
 title: "Polygon hacked for over 800,000 MATIC"
+loss: 2400000
 ---
 
 ## Summary
