--- a/content/attacks/posts/2021-12-11-AscendEX.md
+++ b/content/attacks/posts/2021-12-11-AscendEX.md
@@ -6,6 +6,7 @@ entity-types:
   - Exchange
 attack-types: Wallet Hack
 title: "AscendEX Hack: $77 Million Stolen in Hot Wallet Breach"
+loss: 77000000
 ---
 
 ## Summary
