--- a/content/attacks/posts/2022-02-01-BitBNS.md
+++ b/content/attacks/posts/2022-02-01-BitBNS.md
@@ -8,6 +8,7 @@ attack-types:
   - Infrastructure Attack
   - Private Key Leak
 title: "BitBNS Exchange Hacked for $8 Million, Incident Initially Concealed"
+loss: 8068660
 ---
 
 ## Summary
