--- a/content/attacks/posts/2022-02-02-Wormhole.md
+++ b/content/attacks/posts/2022-02-02-Wormhole.md
@@ -8,6 +8,7 @@ attack-types:
   - Smart Contract Exploit
   - Signature Verification Issue
 title: "Wormhole Hack: Code Vulnerability Has Led to $325 Million Stolen"
+loss: 325000000
 ---
 
 ## Summary
