--- a/content/attacks/posts/2022-03-23-Ronin.md
+++ b/content/attacks/posts/2022-03-23-Ronin.md
@@ -15,6 +15,7 @@ attack-types:
   - 51%
   - Wallet Hack
 title: "Ronin Network suffers 51% attack, $625 million stolen"
+loss: 625000000
 ---
 
 ## Summary
