--- a/content/attacks/posts/2022-08-01-Nomad.md
+++ b/content/attacks/posts/2022-08-01-Nomad.md
@@ -8,6 +8,7 @@ attack-types:
   - Smart Contract Exploit
   - Signature Verification Issue
 title: "Nomad Cryptocurrency Platform Hacked: $190 Million Lost"
+loss: 190000000
 ---
 
 ## Summary
