--- a/content/attacks/posts/2022-11-01-Deribit.md
+++ b/content/attacks/posts/2022-11-01-Deribit.md
@@ -6,6 +6,7 @@ entity-types:
   - Exchange
 attack-types: Wallet Hack
 title: "Deribit Hack: $28 Million Stolen in Hot Wallet Attack"
+loss: 28000000
 ---
 
 ## Summary
