--- a/content/attacks/posts/2023-01-12-Lendhub.md
+++ b/content/attacks/posts/2023-01-12-Lendhub.md
@@ -6,6 +6,7 @@ entity-types:
   - Lending Platform
 attack-types: Smart Contract Exploit
 title: "Lendhub Hacked for $6 Million"
+loss: 6000000
 ---
 
 ## Summary
