--- a/content/attacks/posts/2023-02-01-BonqDAO.md
+++ b/content/attacks/posts/2023-02-01-BonqDAO.md
@@ -9,6 +9,7 @@ entity-types:
 attack-types:
   - Price Oracle Manipulation
 title: "BonqDAO Suffers a $120 Million Loss Through Price Oracle Manipulation"
+loss: 120000000
 ---
 
 ## Summary
