--- a/content/attacks/posts/2023-02-07-CoW-Swap.md
+++ b/content/attacks/posts/2023-02-07-CoW-Swap.md
@@ -8,6 +8,7 @@ entity-types:
 attack-types:
   - Smart Contract Exploit
 title: "CoW Swap Suffers Smart Contract Exploit, Resulting in an Approximately $166K Loss"
+loss: 166183
 ---
 
 ## Summary
