--- a/content/attacks/posts/2023-02-09-dForce.md
+++ b/content/attacks/posts/2023-02-09-dForce.md
@@ -9,6 +9,7 @@ attack-types:
   - Smart Contract Exploit
   - Reentrancy Attack
 title: "dForce DeFi Protocol Loses $3.65 Million in Reentrancy Attack"
+loss: 3650000
 ---
 
 ## Summary
