--- a/content/attacks/posts/2023-02-16-Platypus.md
+++ b/content/attacks/posts/2023-02-16-Platypus.md
@@ -9,6 +9,7 @@ attack-types:
   - Smart Contract Exploit
   - Flash Loan Attack
 title: "Flash Loan Attack on Platypus Finance Results in an $8.5 Million Loss"
+loss: 8500000
 ---
 
 ## Summary
