--- a/content/attacks/posts/2023-03-28-Safemoon.md
+++ b/content/attacks/posts/2023-03-28-Safemoon.md
@@ -8,6 +8,7 @@ entity-types:
 attack-types:
   - Smart Contract Exploit
 title: "SafeMoon's Smart Contract Exploit: An $8.9M Heist and Unexpected Return of Funds"
+loss: 8900000
 ---
 
 ## Summary
