--- a/content/attacks/posts/2023-04-28-0vix.md
+++ b/content/attacks/posts/2023-04-28-0vix.md
@@ -9,6 +9,7 @@ attack-types:
   - Smart Contract Exploit
   - Flash Loan Attack
 title: "0vix Hack: $2 Million Stolen in Exploit"
+loss: 2000000
 ---
 
 ## Summary
