--- a/content/attacks/posts/2023-07-22-AlphaPo.md
+++ b/content/attacks/posts/2023-07-22-AlphaPo.md
@@ -11,6 +11,7 @@ entity-types:
   - Crypto Payment Platform
 attack-types: Wallet Hack
 title: "AlphaPo Hot Wallets Breached Resulting in a Loss of Over $60 Million"
+loss: 60000000
 ---
 
 ## Summary
