--- a/content/attacks/posts/2023-07-30-CurveFi.md
+++ b/content/attacks/posts/2023-07-30-CurveFi.md
@@ -12,6 +12,7 @@ attack-types:
   - Smart Contract Exploit
   - Reentrancy Attack
 title: "Several Liquidity Pools Exploited for Nearly $60 Million"
+loss: 60000000
 ---
 
 ## Summary:
