--- a/content/attacks/posts/2023-09-04-Stake.md
+++ b/content/attacks/posts/2023-09-04-Stake.md
@@ -8,6 +8,7 @@ attack-types:
   - Wallet Hack
   - Infrastructure Attack
 title: "Stake.com Suffers $41.4 Million Security Breach"
+loss: 41400000
 ---
 
 ## Summary
