--- a/content/attacks/posts/2023-09-12-CoinEx.md
+++ b/content/attacks/posts/2023-09-12-CoinEx.md
@@ -11,6 +11,7 @@ attack-types:
   - Wallet Hack
   - Social Engineering
 title: "CoinEx Suffers $52.8 Million Security Breach Across Multiple Chains"
+loss: 52847077
 ---
 
 ## Summary
