--- a/content/attacks/posts/2020-08-31-2gether.md
+++ b/content/attacks/posts/2020-08-31-2gether.md
@@ -6,6 +6,7 @@ entity-types:
   - Exchange
 attack-types: Infrastructure Attack
 title: 2gether hacked, losing over €1.183 million worth of cryptocurrencies
+loss: 1407770
 ---
 
 ## Summary
