--- a/content/attacks/posts/2022-01-28-Qubit.md
+++ b/content/attacks/posts/2022-01-28-Qubit.md
@@ -6,6 +6,7 @@ entity-types:
   - Lending Platform
 attack-types: Smart Contract Exploit
 title: "Hackers Breach Qubit Finance Platform, Stealing $80 Million"
+loss: 80000000
 ---
 
 ## Summary
