rewrite security failure causes

--- a/content/attacks/posts/2021-04-19-EasyFi.md
+++ b/content/attacks/posts/2021-04-19-EasyFi.md
@@ -37,4 +37,6 @@ EasyFi estimated the losses from the hack to be $81 million. The stolen assets i
 
 ## Security Failure Causes
 
-- **Insufficient system security measures:** The presence of malware suggests that insufficient security measures may have been taken to detect and prevent such attacks. This may include inadequate network monitoring, lack of intrusion detection systems, or insufficient measures to protect against advanced malicious threats.
+- **Injection Vulnerability Exploitation:** The attacker injected a malicious version of MetaMask, showcasing a severe injection vulnerability which allowed unauthorized access to mnemonic/private keys to execute unauthorized transactions.
+- **Insufficient Access Controls:** The machine compromised was dedicated to official transfers but was successfully accessed by the attacker, indicating inadequate access control measures.
+- **Delayed Incident Response:** The machine's offline status at the time of attack delayed the response, enabling the attacker to drain substantial assets from the protocol, reflecting a need for enhanced incident detection and response strategies.
