--- a/content/market-health/posts/poloniex-investigation/Poloniex 2023_10_26 - 2023_10_27.md
+++ b/content/market-health/posts/poloniex-investigation/Poloniex 2023_10_26 - 2023_10_27.md
@@ -1,43 +1,79 @@
-title: "Unnatural pattern on Poloniex"
+title: "A specific pattern on Trade Size histograms for Poloniex"
 date: 2023-10-26
 entities:
-  - dot
-  - avax
+  - eth
+  - zec
+  - wbct	
   
 ---
 
+
 ## Summary
 
-Visualising volume distribution shows there is a significant skewness to a specific trade size for dot-usdt and avax-usdt on Poloniex on 2023/10/26 10:00 - 2023/10/27, while smaller trade sizes are relatively rare, which can indicate artificial trading.  
+A specific pattern was identified in volume distribution for different traded pairs on Poloniex. Trade Size histogram shows that a significant portion of volume is concentrated in one small interval at each hour of a day which is unlike healthy market behavior, to make it clear further investigation is needed.
 
 ## Metrics used
 
-It can be seen that volume distribution of dot-usdt is concentrated around 21 which looks unnatural.
+Visualizing volume distribution for eth - usdt shows that weighty part of trades is concentrated around 0.5 every hour during the affected period.
+  
+{{< figure src="eth-usdt volume_distr1.png" loading="lazy" >}}
+{{< figure src="eth-usdt volume_distr2.png" loading="lazy" >}}
+{{< figure src="eth-usdt volume_distr3.png" loading="lazy" >}}
+{{< figure src="eth-usdt volume_distr4.png" caption="Volume distribution for eth - usdt on Poloniex 2023/10/26 10:00 - 2023/10/27 09:59; standard deviation highlighted in red, kurtosis highlighted in green and skewness - in blue" loading="lazy" >}}
 
-{{< figure src="volume_distr1 dot-usdt.png" loading="lazy" >}} {{< figure src="volume_distr2 dot-usdt.png" loading="lazy" >}} {{< figure src="volume_distr3 dot-usdt.png" loading="lazy" >}} {{< figure src="volume_distr4 dot-usdt.png" caption="Volume distribution for dot - usdt on Poloniex 2023/10/26 10:00 - 2023/10/27 09:59; standard deviation highlighted in red, kurtosis highlighted in green and skewness - in blue" loading="lazy" >}}
+Such regularity may raise suspicion, coupled with the fact that the expected frequency of 5 as the first digit in a data set is 0.079 according to Benford's law.
 
-While volume_distribution_mode for dot-usdt on Poloniex is consistently around 21 with insignificant fluctuations, this parameter is smaller for the same entity at Gateio and Bybit.
+{{< figure src="eth-usdt first_digit.png" caption="Distribution of leading digits in trades for eth - usdt, Poloniex, 2023/10/26 - 2023/10/27"  loading="lazy" >}}
 
-{{< figure src="mode dot-usdt.png" caption="Volume distribution mode for dot - usdt on Poloniex, Bybit and Gateio 2023/10/26 - 2023/10/27" loading="lazy" >}} 
+Negative skewness signalizes this volume distribution is likely to be artificial. 
 
-Also, the prevailing of 2 as the first digit of trade sizes is not aligned with Benford's law.
+{{< figure src="eth-usdt skewness.png" caption="Volume distribution skewness for eth - usdt on Poloniex 2023/10/26 - 2023/10/27"  loading="lazy" >}}
 
-{{< figure src="first_digit dot-usdt.png" caption="Distribution of leading digits in trade sizes of dot - usdt ,  Poloniex, 2023/10/26 - 2023/10/27"  loading="lazy" >}} 
+Normally, traded volumes and market volatility are correlated with each other, volume increases when volatility rises and vice versa. Correlation lower than 0.4 is considered as one more signal of market manipulation.
 
-Buy/sell ratio insignificantly fluctuates around 0.5 which is not typical for natural market, where it normally deviates within 0.4 - 0.6.
+{{< figure src="eth-usdt volume_volatility.png" caption="Volume-Volatility Correlation for eth-usdt on Poloniex, 2023/10/26 - 2023/10/27" loading="lazy" >}}
 
-{{< figure src="buy_sell dot-usdt.png" caption="Buy/sell ratio for dot-usdt on Poloniex, Bybit and Gateio, 2023/10/26 - 2023/10/27" loading="lazy" >}}
+To estimate the size of possible manipulation, it should be noticed that the trading volume on Poloniex in this pair was relatively small.
 
-Similar patterns are observed with avax-usdt where the most frequent trade size is 8.
+{{< figure src="eth-usdt vwap and volume.png" caption="Trading volume in every one-hour period (bottom graph) and VWAP (top graph) for eth-usdt on Poloniex, Gateio and Hitbtc 2023/10/26 10:00 - 2023/10/27 09:59" loading="lazy" >}}
 
-{{< figure src="volume_distr1 avax.png" loading="lazy" >}} {{< figure src="volume_distr2 avax.png" loading="lazy" >}} {{< figure src="volume_distr3 avax.png" loading="lazy" >}} {{< figure src="volume_distr4 avax.png" caption="Volume distribution for avax - usdt on Poloniex 2023/10/26 10:00 - 2023/10/27 09:59; standard deviation highlighted in red, kurtosis highlighted in green and skewness - in blue" loading="lazy" >}}
+Similar patterns are observed with zec-usdt where the most frequent and regularly traded size is 3.25 - 3.55 which is an uncommon situation because small trades usually prevail in the market. 
+zec-usdt volume_distr1.png
+zec-usdt volume_distr2.png
+zec-usdt volume_distr3.png
+zec-usdt volume_distr4.png
 
-{{< figure src="mode avax.png" caption="Volume distribution mode for avax - usdt on Poloniex, Binance and Gateio 2023/10/26 - 2023/10/27" loading="lazy" >}}
+While volume_distribution_mode for zec-usdt on Poloniex is consistently concentrated around 3.3, there is no such a trend on Kukoin and Hitbtc, smaller sizes prevail here.
 
-{{< figure src="first_digit avax.png" caption="Distribution of leading digits in trade sizes of avax - usdt , Poloniex, 2023/10/26 - 2023/10/27"  loading="lazy" >}}
+{{< figure src="zec-usdt mode.png" caption="Volume distribution mode for zec-usdt on Poloniex, Kukoin and Hitbtc 2023/10/26 - 2023/10/27" loading="lazy" >}}
 
-{{< figure src="buy_sell avax.png" caption="Buy/sell ratio for avax - usdt on Poloniex, Binance and Gateio, 2023/10/26 - 2023/10/27" loading="lazy" >}}
+According to Benford's law, the expected frequency of 3 as the leading digit in a data set is 0.125, but we can see 3 as the most frequent first digit 24 times in a row.
+zec-usdt first_digit.png
 
-Also, Volume-Volatility Correlation for avax-usdt is mostly lower than 0.4, sometimes negative, which is also considered unnatural since volume usually increases when volatility rises.
+Buy/sell ratio is relatively stable around 0.5 which is not typical for natural market, where it deviates within roughly 0.4 - 0.6.
 
-{{< figure src="volume_volatility avax.png" caption="Volume-Volatility Correlation for avax - usdt on Poloniex, 2023/10/26 - 2023/10/27" loading="lazy" >}}
+{{< figure src="zec-usdt buy_sell.png" caption="Buy/sell ratio for zec-usdt on Poloniex, Kukoin and Hitbtc 2023/10/26 - 2023/10/27" loading="lazy" >}}
+
+Volume Volatility correlation for zec-usdt on Poloniex is mostly lower than 0.4.
+zec-usdt volume_volatility.png
+
+The total trading volume for zec-usdt on Poloniex compared to that on Kukoin and Hitbtc can be seen on the graph below.
+zec-usdt vwap and volume.png
+
+The same analysis was conducted with wbct - usdt:
+wbtc-usdt volume_distr1.png
+wbtc-usdt volume_distr2.png
+wbtc-usdt volume_distr3.png
+wbtc-usdt volume_distr4.png
+wbtc-usdt first_digit.png
+wbtc-usdt mode.png
+wbtc-usdt volume_volatility.png
+
+The volume of trades on Poloniex compared to that on Hitbtc and Gateio is bigger, and there is a consistent gap on VWAP line charts between Poloniex and Hitbtc/Gateio.
+wbtc-usdt vwap and volume.png
+
+Also, a significant gap can be noticed visually between VWAP for wbct - usdt on Poloniex and WBTC - USD rate at 6 p. m. - 10 a. m. period of time. 
+
+{{< figure src="WBTC_1698267600-1698440399_graph_coinmarketcap.png" caption="WBTC - USD rate on Coinmarketcap, 2023/10/26 - 2023/10/27" loading="lazy" >}}
+
+{{< figure src="USDT_1698267600-1698440399_graph_coinmarketcap.png" caption="USDT - USD rate on Coinmarketcap, 2023/10/26 - 2023/10/27" loading="lazy" >}}
