--- a/content/attacks/posts/2023-05-22-Fintoch.md
+++ b/content/attacks/posts/2023-05-22-Fintoch.md
@@ -12,7 +12,7 @@ title: "Fintoch DeFi Platform Executes $31.6 Million Rugpull Scam"
 
 ## Summary
 
-In May 2023, the DeFi investment platform Fintoch executed a rugpull, defrauding users of $31.6 million. The project claimed backing by Morgan Stanley and offered unrealistic 1% daily returns. Fintoch's legitimacy was questioned, after [Morgan Stanley debanked Fintoch's claims](https://www.morganstanley.com/content/dam/msdotcom/global-offices/pdf/Indonesia/Indonesia_Fintoch_Important_Notice.pdf). The fradulent company launched a public sale, and accumulated a large amount of USDT in Fintoch STO smart contract. The smart contract was deployed in Binance Smart Chain, and contained functionality of FTH BEP20 token and FTH/USDT liquidity pair. A large amount of FTH tokens was initially transferred to the address controlled by the scammers, and after reaching some critical point, the scammers exchanged them for USDT. This leds to FTH price to dump, and left investors with valueless tokens. The funds were bridged to Ethereum and Tron chains. As of December 12, 2023, no legal action or recovery efforts have been reported.
+In May 2023, the DeFi investment platform Fintoch [executed a rugpull, defrauding users of $31.6 million](https://www.halborn.com/blog/post/explained-the-fintoch-rug-pull-may-2023). The project claimed backing by Morgan Stanley and offered unrealistic 1% daily returns. Fintoch's legitimacy was questioned, after [Morgan Stanley debanked Fintoch's claims](https://www.morganstanley.com/content/dam/msdotcom/global-offices/pdf/Indonesia/Indonesia_Fintoch_Important_Notice.pdf). The fradulent company launched a public sale, and accumulated a large amount of USDT in Fintoch STO smart contract. The smart contract was deployed in Binance Smart Chain, and contained functionality of FTH BEP20 token and FTH/USDT liquidity pair. A large amount of FTH tokens was initially transferred to the address controlled by the scammers, and after reaching some critical point, the scammers exchanged them for USDT. This leds to FTH price to dump, and left investors with valueless tokens. The funds were bridged to Ethereum and Tron chains. As of December 12, 2023, no legal action or recovery efforts have been reported.
 
 ## Attackers
 
