--- a/content/attacks/posts/2023-05-22-Fintoch.md
+++ b/content/attacks/posts/2023-05-22-Fintoch.md
@@ -8,6 +8,7 @@ attack-types:
   - Scam
   - Rugpull
 title: "Fintoch DeFi Platform Executes $31.6 Million Rugpull Scam"
+loss: 31697984
 ---
 
 ## Summary
