Update and rename Create - 2023-11-10-Raft.md to 2023-11-10-Raft.md

--- a/content/attacks/posts/2023-11-10-Raft.md
+++ b/content/attacks/posts/2023-11-10-Raft.md
@@ -34,8 +34,5 @@ Raft R lost approximately $6,700,000 during the attack.
 
 ## Security Failure Causes
 
-   - **Precision Calculation Flaw:** A critical vulnerability in the token minting process allowed unauthorized minting of R tokens.
+   - **Smart Contract Vulnerability:** The exploit was a direct consequence of a loophole in the smart contract code, underscoring the need for more robust code review and testing procedures. Specifically, a critical precision calculation vulnerability in the token minting process allowed unauthorized minting of R tokens.
    - **Audit Ineffectiveness:** Despite undergoing prior security audits, this particular vulnerability was not detected, indicating a possible deficiency in audit scope or depth.
-   - **Smart Contract Weakness:** The exploit was a direct consequence of a loophole in the smart contract code, underscoring the need for more robust code review and testing procedures.
-
-
