--- a/content/attacks/posts/2023-11-10-Poloniex.md
+++ b/content/attacks/posts/2023-11-10-Poloniex.md
@@ -1,36 +1,50 @@
 ---
 date: 2023-11-10
 target-entities: Poloniex
-entity-types: Exchange 
-attack-types: Private Key Leak
-title: "Poloniex Loses $125,000,000"
-loss: 125000000
+entity-types:
+  - Custodian
+  - Exchange
+attack-types:
+  - Private Key Compromise
+  - Web Infrastructure Attack
+title: "Poloniex Exchange Suffers $122.98 Million Security Breach"
 ---
 
 ## Summary
 
-Tron founder Justin Sun is offering a 5% white hat bounty to the hacker who exploited Poloniex for $125 [million.](https://dailyhodl.com/2023/11/10/tron-founder-justin-sun-offers-5-cut-to-hacker-after-poloniex-crypto-exchange-loses-125000000-in-cyber-heist/#:~:text=The%20Daily%20Hodl-,Tron%20Founder%20Justin%20Sun%20Offers%205%25%20Cut%20to%20Hacker%20After,Loses%20%24125%2C000%2C000%20in%20Cyber%20Heist&text=Tron%20(TRX)%20founder%20Justin%20Sun,for%20%24125%20million%20in%20crypto.) Sun gave the hacker a week to return the [funds](https://twitter.com/peckshield/status/1722991018272759816) to the affected wallets. If not, law enforcement will be involved. The hacker stole $56 million in Ethereum, $48 million in TRX, $18 million in Bitcoin, and other assets, including Tether, USD Coin, and Shiba Inu. The hacker made a mistake and burned $2 million worth of [Golem.](https://twitter.com/0xSisyphus/status/1722945133983748432?s=20) Sun promises full reimbursement for the stolen funds and collaboration with other exchanges to recover the assets. Poloniex is now listed as one of the Top 10 [Largest](https://finance.yahoo.com/news/poloniex-now-among-top-10-160516233.html#:~:text=Poloniex%20Now%20Among%20Top%2010%20Largest%20Cex%20Hacks%20With%20%24125%20Million%20Loss,-Camila%20Russo&text=Poloniex%2C%20the%20centralized%20crypto%20exchange,loss%20of%20about%20%24125M.) hacks with this $125 Million Loss. 
-
+On November 10, 2023, Poloniex, a custodial centralized exchange, [experienced a security breach](https://www.halborn.com/blog/post/explained-the-poloniex-hack-november-2023) due to a private key compromise. The attacker exploited Poloniex's hot wallets and withdrew funds across three chains: Bitcoin, Ethereum, and Tron. The total losses amounted to approximately $122.98 million, including BTC, USDT, USDC, ETH, TRX, and other assets. The stolen assets were exchanged for native tokens and transferred to sereval addresses.
 
 ## Attackers
 
-The identity of the attacker is currently unknown.
+The attackers [believed to be the Lazarus Group](https://news.bitcoin.com/poloniex-hack-analysis-north-korean-hacking-syndicate-lazarus-group-suspected-in-wallet-breach/), North Korean cybercrime group. The attacker used the following addresses to transfer the funds:
+
+- Ethereum:
+    - [0x0a5984f86200415894821bfefc1c1de036dbf9e7](https://etherscan.io/address/0x0a5984f86200415894821bfefc1c1de036dbf9e7)
+- Bitcoin:
+    - [bc1qnpc7u2ha7ct9c458rrqsawylz9e9j6jvkvzttt](https://www.blockchain.com/explorer/addresses/btc/bc1qnpc7u2ha7ct9c458rrqsawylz9e9j6jvkvzttt)
+- Tron:
+    - [TKK6d1YALy8HCSoCSWWd1ZJhyC9NPPx4wa](https://tronscan.org/#/address/TKK6d1YALy8HCSoCSWWd1ZJhyC9NPPx4wa)
 
 ## Losses
 
--Poloniex [lost](https://twitter.com/lookonchain/status/1722969227915661531) 56,000,000 worth of ETH, 48,000,000 worth of [TRX,](https://platform.arkhamintelligence.com/explorer/address/TXs71PNcHmxgptA3wQ4g398qbToMPhnEoG) and 18,000,000 worth of BTC. 
+Poloniex Exchange lost around $122.98 million in total from its hot wallets across three chains:
 
--The attacker was also able to obtain a number of other crypto assets, including stablecoins Tether (USDT), USD Coin (USDC), as well as [memecoin](https://cryptopotato.com/heres-what-tokens-were-stolen-in-the-125-million-poloniex-hack/) Shiba Inu (SHIB).
+- Bitcoin: $18,441,440
+- Ethereum: $56,753,683
+- Tron: $47,786,268
 
 ## Timeline
 
-**November 10, 2023, 11:07 AM UTC:** Poloniex announces their wallet had been closed for [maintenance](https://twitter.com/PoloSupport/status/1722934043543752968?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1722934043543752968%7Ctwgr%5E58cb76ede3fa88c84e8020c747d8943bf3d02bdc%7Ctwcon%5Es1_&ref_url=https%3A%2F%2Fwww.fxstreet.com%2Fcryptocurrencies%2Fnews%2Fcrypto-exchange-poloniex-hack-leads-to-60-million-in-assets-stolen-peckshield-says-202311101206) 
-**November 10, 2023, 12:06 PM:** Poloniex announces the hack and the extent of the [losses.](https://www.fxstreet.com/cryptocurrencies/news/crypto-exchange-poloniex-hack-leads-to-60-million-in-assets-stolen-peckshield-says-202311101206)
-**November 15, 2023, 12:30 PM:** Poloniex puts out a statement that the platform is now running smoothly and the [restoration](https://support.poloniex.com/hc/en-us/articles/19080588734743) efforts have almost been completed.
+- **November 10, 2023, 10:36 AM UTC:** The [first malicious transaction occurred](https://etherscan.io/tx/0x686429f059903275d78b2ac764e82e2eb338b13cc30e561ef24504b84731a8a5) in Ethereum chain with over $11 million USDT being drained.
+- **November 10, 2023, 04:04 PM UTC:** Justin Sun, majority shareholder of the exchange, [tweeted](https://twitter.com/justinsuntron/status/1723008641433784695) that part of the stolen funds was frozen.
+- **November 10, 2023, 08:12 PM UTC:** A market researcher platform, X-explore, [posted an analysis of the hack](https://twitter.com/x_explore_eth/status/1723071043177468167), suspecting Lazarus Group in the breach due to similar attack behavior to the Stake.com incident.
+- **November 15, 2023:** Poloniex [announced](https://support.poloniex.com/hc/en-us/articles/19080588734743) the resumption of deposit and withdrawal services.
+- **November 18, 2023, 06:33 AM UTC:** Justin Sun [sent an on-chain message](https://etherscan.io/tx/0x87383693584db90e2b5c5fdb16d98f168b7a7005f32869275e6d477d5576ba0c) to the attacker with the following content:
+    > We have already confirmed your identity, and the police forces of China, the USA, and Russia have been involved... Return by November 25, 2023, and we will offer a $10 million white hat reward.
+- **November 20, 2023, 03:05 AM UTC:** A community member [noticed](https://twitter.com/billyp258/status/1726436594662437091) that the exchange wouldn’t need to involve the police in three different countries and send the same message in 15 different languages if the hacker was already identified.
 
 ## Security Failure Causes
 
-A private key [compromise](https://cointelegraph.com/news/poloniex-exchange-hack-60-million-drained-5-percent-bounty) is suspected to be the cause. 
+**Compromised Private Key:** The primary cause of the security breach was the compromise of the private key of Poloniex's hot wallets. The attacker exploited this vulnerability to withdraw funds from the hot wallets.
 
-
-
+**Web Infrastructure Attack:** The simultaneous hack of multiple wallets in various chains points to a more extensive web infrastructure attack, possibly targeting vulnerabilities in the platform's security system.
