--- a/content/attacks/posts/2023-11-10-Poloniex.md
+++ b/content/attacks/posts/2023-11-10-Poloniex.md
@@ -1,5 +1,8 @@
 ---
 date: 2023-11-10
+tags:
+  - Lazarus Group
+  - North Korea
 target-entities: Poloniex
 entity-types:
   - Custodian
@@ -8,6 +11,7 @@ attack-types:
   - Private Key Compromise
   - Web Infrastructure Attack
 title: "Poloniex Exchange Suffers $122.98 Million Security Breach"
+loss: 122980000
 ---
 
 ## Summary
