--- a/content/attacks/posts/2023-11-10-Poloniex.md
+++ b/content/attacks/posts/2023-11-10-Poloniex.md
@@ -31,7 +31,7 @@ The attackers [believed to be the Lazarus Group](https://news.bitcoin.com/poloni
 
 ## Losses
 
-Poloniex Exchange lost around $122.98 million in total from its hot wallets across three chains:
+Poloniex Exchange lost $122,981,391 in total from its hot wallets across three chains:
 
 - Bitcoin: $18,441,440
 - Ethereum: $56,753,683
