Update and rename posts - Create - 2023-11-18-Kronos.md to 2023-11-18-Kronos.md
Formatting changes

--- a/content/attacks/2023-11-18-Kronos.md
+++ b/content/attacks/2023-11-18-Kronos.md
@@ -5,7 +5,7 @@ entity-types:
    - DeFi
 attack-types:
    - Private Key Leak
-title: “Kronos Research halts trading after $25M API key hack”
+title: Kronos Research halts trading after $25M API key hack
 loss: 26000000
 ---
 
@@ -27,10 +27,10 @@ At the time of the attack, Kronos Research lost around $26 million. According to
 
 ## Timeline
 
-   - **November 18, 2023, 17:05 UTC:** Initial funds transfer [begins.](https://etherscan.io/address/0x2b0502fdab4e221dcd492c058255d2073d50a3ae)
-   - **November 18, 2023, 23:11 UTC:** ZachXBT posts a graph with six of the ETH [transactions](https://twitter.com/zachxbt/status/1726015231023796233) on X.
-   - **November 19, 2023, 11:27 UTC:** Kronos Research releases a [series](https://twitter.com/ResearchKronos/status/1726203102842466650) of posts on X confirming the hack involved unauthorized access to its API Keys, resulting in a loss of approximately $26 million and stating the firm will internally cover all losses.
-   - **November 28, 2023, 18:30 UTC:** Kronos Research offers a [whitehat bounty](https://etherscan.io/idm?addresses=0xad5916c0f641841637bab1a1049224c3cfd5acf0,0x7e1a22655e2a46a5dd8aec2905c298f1d06b8597&type=1) of 10% and promises no legal ramifications if funds are returned by 8:00 UTC on November 30, 2023.
+   - **November 18, 2023 at 17:05 Coordinated Universal Time:** Initial funds transfer [begins.](https://etherscan.io/address/0x2b0502fdab4e221dcd492c058255d2073d50a3ae)
+   - **November 18, 2023 at 23:11 Coordinated Universal Time:** ZachXBT posts a graph with six of the ETH [transactions](https://twitter.com/zachxbt/status/1726015231023796233) on X.
+   - **November 19, 2023 at 11:27 Coordinated Universal Time:** Kronos Research releases a [series](https://twitter.com/ResearchKronos/status/1726203102842466650) of posts on X confirming the hack involved unauthorized access to its API Keys, resulting in a loss of approximately $26 million and stating the firm will internally cover all losses.
+   - **November 28, 2023 at 18:30 Coordinated Universal Time:** Kronos Research offers a [whitehat bounty](https://etherscan.io/idm?addresses=0xad5916c0f641841637bab1a1049224c3cfd5acf0,0x7e1a22655e2a46a5dd8aec2905c298f1d06b8597&type=1) of 10% and promises no legal ramifications if funds are returned by 8:00 UTC on November 30, 2023.
 
 ## Security Failure Causes
 
