Update and rename Create - 2023-11-09-CoinSpot.md to 2023-11-09-CoinSpot.md
Formatting corrections

--- a/content/attacks/posts/2023-11-09-CoinSpot.md
+++ b/content/attacks/posts/2023-11-09-CoinSpot.md
@@ -5,7 +5,7 @@ entity-types:
    - Exchange
 attack-types:
    - Private Key Leak
-title: “Crypto exchange CoinSpot reportedly suffers $2.4 million hot wallet hack”
+title: Crypto Exchange CoinSpot Reportedly Suffers $2.4 Million Hot Wallet Hack
 loss: 2400000
 ---
 
@@ -28,10 +28,10 @@ CoinSpot lost 1,262 ETH, worth $2,400,000 USD at the time of the attack. It is c
 
 ## Timeline
 
-   - **November 8, 2023, 18:16 UTC:** Initial [transactions](https://etherscan.io/address/0x326dc417d96c72349FA3d1fda4aE9C1c77FD89B8) take place.
-   - **“November 8, 2023, 20:01 UTC:”** ZackLBT announces hack on [Telegram.](https://t.me/investigations/70) 
-   - **“November 9, 2023, 06:25 UTC:”** [Cointelegraph](https://twitter.com/Cointelegraph/status/1722485447723745448) posts the exploit on X suggesting the hack was due to a private key leak. 
-   - **”November 10, 2023, 15:29 UTC:”** The Financial [Review](https://www.afr.com/technology/crypto-hack-suggests-australia-s-coinspot-exchange-has-been-compromised-20231110-p5eizc) confirms the funds have been reported stolen to Chainalysis.
+   - **November 8, 2023 at 18:16 Coordinated Universal Time:** Initial [transactions](https://etherscan.io/address/0x326dc417d96c72349FA3d1fda4aE9C1c77FD89B8) take place.
+   - **November 8, 2023 at 20:01 Coordinated Universal Time:** ZackLBT announces hack on [Telegram.](https://t.me/investigations/70) 
+   - **November 9, 2023 at 06:25 Coordinated Universal Time:** [Cointelegraph](https://twitter.com/Cointelegraph/status/1722485447723745448) posts the exploit on X suggesting the hack was due to a private key leak. 
+   - **November 10, 2023 at 15:29 Coordinated Universal Time:** The Financial [Review](https://www.afr.com/technology/crypto-hack-suggests-australia-s-coinspot-exchange-has-been-compromised-20231110-p5eizc) confirms the funds have been reported stolen to Chainalysis.
 
 ## Security Failure Causes
 
