--- a/content/attacks/posts/2024-02-23-BitForex.md
+++ b/content/attacks/posts/2024-02-23-BitForex.md
@@ -45,10 +45,10 @@ The total loss from the Deus Finance hack amounted to approximately [$56.5 milli
 
 ## Timeline
 
-- **January 31 2024, 05:07 PM +UTC:** Exchange CEO Jason Luo [steps down](https://support.bitforex.com/hc/en-us/articles/28260960127385-Jason-Stepped-Down-as-CEO-of-BitForex).
-- **February 21 2024, 08:16:23 AM +UTC:** The [first malicious](https://etherscan.io/tx/0xee8a0e425670b53e5066451362324fb6ef36fb5507a525567fc8c9b68a03709f) transaction occurred.
-- **February 23 2024, 07:12:59 PM +UTC:** The withdrawal of funds from the exchange [began](https://etherscan.io/tx/0xb1ef6176112c8b019192b5e627732afee8930810801961ded081720e74544753) and the exchange stopped operating without warning.
-- **February 26 2024:** 0xScope [published](https://www.0xscope.com/blog/Hack-or-Exit-Scam-What-Happened-at-BitForex-1762081344856928256?ch=lk) an analysis of the incident. 
+- **January 31, 2024, 05:07 PM +UTC:** Exchange CEO Jason Luo [steps down](https://support.bitforex.com/hc/en-us/articles/28260960127385-Jason-Stepped-Down-as-CEO-of-BitForex).
+- **February 21, 2024, 08:16:23 AM +UTC:** The [first malicious](https://etherscan.io/tx/0xee8a0e425670b53e5066451362324fb6ef36fb5507a525567fc8c9b68a03709f) transaction occurred.
+- **February 23, 2024, 07:12:59 PM +UTC:** The withdrawal of funds from the exchange [began](https://etherscan.io/tx/0xb1ef6176112c8b019192b5e627732afee8930810801961ded081720e74544753) and the exchange stopped operating without warning.
+- **February 26, 2024:** 0xScope [published](https://www.0xscope.com/blog/Hack-or-Exit-Scam-What-Happened-at-BitForex-1762081344856928256?ch=lk) an analysis of the incident. 
 
 ## Security Failure Causes
 
