--- a/content/attacks/posts/2024-03-05-WooFi.md
+++ b/content/attacks/posts/2024-03-05-WooFi.md
@@ -1,8 +1,8 @@
-	
+---	
 date: 2024-03-05
-target-entities: BitMart
-entity-types: Decentralized Exchange
-attack-types: Flash Loan Attack
+target-entities: WooFi
+entity-types: DeFi,Exchange
+attack-types: Smart Contract Exploit,Flash Loan Attack
 title: "The WOOFi suffered a flash loan exploit on Arbitrum"
 ---
 
@@ -31,4 +31,9 @@ The WooFi lost around 7.9 million USD worth 2,223.1 ETH.The stolen funds still r
 - **Mar 5, 2024, 16:12 PM UTC:** The WOOFi [posted](https://twitter.com/_WOOFi/status/1765047837727891853) on the X account about they paused affected pools
 - **Mar 5, 2024, 16:37 PM UTC:** PeckShield is a blockchain security company,  [posted](https://twitter.com/PeckShieldAlert/status/1765054155478175943) on X, that WOOFI has been exploited.
 - **Mar 05, 2024 18:40 PM UTC** The WooFi sent [on-chain message](https://etherscan.io/tx/0x45fb400b3cd1a4b04d8e26fa8e5b5fc92003aadf28a000b9c0766c9a408a4af8) to the hacker offering whitehat bounty 10% of the stolen funds whitehat bounty
+
 ## Security Failure Causes
+**Price Calculation Issue:** The primary cause of the security failure was an exploit of the sPMM algorithm that controls the pricing on WOOFi Swaps. The attacker used flash loans to manipulate the price of WOO, taking advantage of low liquidity. WOOFi's sPMM algorithm incorrectly adjusted the WOO price to an extreme value close to zero. This allowed the attacker to swap out 10 million WOO in the same transaction with almost no cost.
+
+**Fallback Check Failure:** The fallback check, which is usually executed against Chainlink, did not cover the WOO token price, allowing the attacker to drain funds from the Woo pool contract (WooPPV2).
+
