--- a/content/attacks/posts/2024-03-05-WooFi.md
+++ b/content/attacks/posts/2024-03-05-WooFi.md
@@ -1,9 +1,14 @@
 ---	
 date: 2024-03-05
 target-entities: WooFi
-entity-types: DeFi,Exchange
-attack-types: Smart Contract Exploit,Flash Loan Attack
+entity-types:
+  - DeFi
+  - Exchange
+attack-types:
+  - Smart Contract Exploit
+  - Flash Loan Attack
 title: "The WOOFi suffered a flash loan exploit on Arbitrum"
+loss: 7969434
 ---
 
 ## Summary
